# gtk3-opengl

./: .gitignore  Makefile.am  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/libgtkglcanvas/: Makefile.am
include/gtkgl/: canvas.h  ext.h  visual.h
res/example/: example.ui
res/glade/catalogs/: gtkglcanvas.xml
res/gtkglcanvas/: gtkglcanvas.pc.in  gtkglcanvas.pc.tmpl
src/: Makefile.am
src/example/: Makefile.am  example.ui  filter-dialog.c  fragment.glsl  main.c  vertex.glsl
src/libgtk3-opengl/: Makefile.am  Makefile.in  attributes.h  canvas.c  canvas.h  canvas_impl.h  glx.c  gtk3-opengl.h  gtkgl-catalog.xml  wgl.c  xgl.c
src/libgtkglcanvas/: Makefile.am  attributes.h  canvas.c  canvas.h  canvas_impl.h  glx.c  gtkglcanvas.xml  visual.c  visual.h  wgl.c
